add project category filter

--- a/InteriorDesignWebsite/templates/nav.html
+++ b/InteriorDesignWebsite/templates/nav.html
@@ -6,14 +6,14 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"> <span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <a class="navbar-brand page-scroll" href="#page-top">NEST</a> </div>
+        <a class="navbar-brand page-scroll" href="{% url 'index' %}">NEST</a> </div>
         
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
             <li><a href="#about" class="page-scroll">About</a></li>
             <li><a href="#services" class="page-scroll">Services</a></li>
-            <li><a href="#portfolio" class="page-scroll">Projects</a></li>
+            <li><a href="{% url 'projects' %}" class="page-scroll">Projects</a></li>
             <li><a href="#team" class="page-scroll">Team</a></li>
             <li><a href="#contact" class="page-scroll">Contact</a></li>
         </ul>
