--- a/InteriorDesignWebsite/templates/index.html
+++ b/InteriorDesignWebsite/templates/index.html
@@ -104,7 +104,8 @@
     </div>
     <div class="col-md-8">
       <h3>Leave us a message</h3>
-      <form name="sentMessage" id="contactForm" novalidate>
+      <form name="sentMessage" id="contactForm" method="POST">
+        {% csrf_token %}
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
