--- a/InteriorDesignWebsite/templates/projects/projects.html
+++ b/InteriorDesignWebsite/templates/projects/projects.html
@@ -4,7 +4,7 @@
 
 {% block content %}    
 
-<div class="container" style="margin-top: 100px">
+<div class="container" style="margin-top: 100px; margin-bottom: 150px;">
     <form method="GET">
         <h3>{{ project_filter.form|bootstrap }}</h3>
         <button type="submit">Search</button>
