--- a/InteriorDesignWebsite/templates/scripts.html
+++ b/InteriorDesignWebsite/templates/scripts.html
@@ -6,5 +6,5 @@
 <script type="text/javascript" src="{% static 'js/nivo-lightbox.js' %}"></script> 
 <script type="text/javascript" src="{% static 'js/jquery.isotope.js' %}"></script> 
 <script type="text/javascript" src="{% static 'js/jqBootstrapValidation.js' %}"></script> 
-<script type="text/javascript" src="{% static 'js/contact_me.js' %}"></script> 
-<script type="text/javascript" src="{% static 'js/main.js' %}"></script>
+<!-- <script type="text/javascript" src="{% static 'js/contact_me.js' %}"></script> 
+<script type="text/javascript" src="{% static 'js/main.js' %}"></script> -->
