fix section navigation issue when coming from another page

--- a/InteriorDesignWebsite/templates/index.html
+++ b/InteriorDesignWebsite/templates/index.html
@@ -11,7 +11,7 @@
           <div class="intro-text">
             <h1><strong>NEST</strong> <span>/</span> Interior Design Studio</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipiscing.</p>
-            <a href="#about" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
+            <a name="about" href="{% url 'index' %}#about" class="btn btn-custom btn-lg page-scroll">Learn More</a> </div>
         </div>
       </div>
     </div>
